implements service type deletion
